--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -268,7 +268,7 @@
     width: 250px;
     padding: 5px;
     border-radius: 5px;
-    background-color: #8080800f;
+    background-color: #80808006;
     
 }
 /* 
@@ -487,10 +487,13 @@ select.sheet-dropdown-edit {
     border-color: rgba(0,0,0,0);
     box-shadow: inset 1px 1px 1px lightgrey;
     background-color: rgba(255,255,255,0.5);  
+    margin-top: 2px;
 }
 
 input.sheet-dropdown-value {
     width: 10em;    
+    padding: 5px 5px 5px 8px;
+    box-shadow: inset 1px 1px 1px lightgrey;
 }
 
 textarea {
