--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -117,6 +117,14 @@
     display: inline-block;
 }
 
+.charsheet .sheet-text-always-edit {
+    border-color: rgba(0,0,0,0);
+    box-shadow: inset 1px 1px 1px lightgrey;
+    background-color: rgba(255,255,255,0.5);  
+    display: inline-block;    
+}
+
+
 
 .sheet-section-unlocked,
 .sheet-section-locked {
